--- a/src/main/resources/templates/CustomerLogin.html
+++ b/src/main/resources/templates/CustomerLogin.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
     <title>Customer Login</title>
-</head>
-<body>
-    <form th:action="@{/login}" method="post">
+    <link rel="stylesheet" href="css/CustomerLogin.css">
+    <!--Bootsrtrap CDN-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></head>
+<body class="body">
 
-        <input type="email" placeholder="Enter Your Email" name="customerLoginEmail">
-        <input type="password" placeholder="Enter Your Password" name="customerLoginPassword">
+<p id="clora"><link rel="stylesheet" href="">Clora</p>
 
-        <button type="submit">Log in</button>
-    </form>
-<p>If you haven't sign up still. hurry sign up <a href="CustomerSignup">here.</a> </p>
+    <div class="container">
+
+        <h2 id="">Purchase Your Dream T Shirt . . . </h2>
+    <div class="row">
+        <div class="col-sm"></div>
+
+        <div class="col-sm">
+            <div class="logincontainer">
+                <form th:action="@{/login}" method="post">
+
+                    <input class="inputarea" type="mail" placeholder="Enter Your Email" name="mail">
+                    <input class="inputarea" type="password" placeholder="Enter Your Password" name="password">
+
+                    <div class="buttonarea">
+                    <button class="button" type="submit">Log in</button>
+                    </div>
+
+                    <p class="signuplink">If you haven't sign up still. hurry sign up <a href="CustomerSignup">here.</a> </p>
+                </form>
+            </div>
+
+        </div>
+
+        <div class="col-sm"></div>
+    </div>
+    </div>
 
 
 <p th:text="${alertmessage}"></p>
+<script src="js/CustomerLogin.js"></script>
 </body>
 </html>
