--- a/src/main/resources/templates/CustomerSignup.html
+++ b/src/main/resources/templates/CustomerSignup.html
@@ -1,22 +1,87 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" http-equiv="refresh" >
     <title>Clora Customer Signup</title>
+    <!--Bootsrtrap CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></head>
+<link rel="stylesheet" href="css/CustomerSignup.css">
 </head>
-<body>
+<body class="body">
 
-  <form th:action="@{/signup}" th:object ="${customer}" method="post" >
+<div class="row" id="firstrow">
+    <a href=""><span class="clora">Clora</span></a>
+</div>
 
-    <input type="email"  placeholder="Enter your Email" name="mail" required>
-    <input type="text"  placeholder="Enter Your Name" name="name" required>
-    <input type="tel"  placeholder="Mobile Number" name="tele" required>
-    <input type="password"  placeholder="Enter a Password" name="password" required>
-    <input type="password" placeholder="Confirm your password here">
+<div class="row" id="secondrow">
+    <div class="col"></div>
 
-    <button type="submit"> Submit</button>
-  </form>
+    <div class="col-6" id="signupcontainer">
+
+        <div class="card">
+            <h3>Sign in</h3>
+            <form th:action="@{/signup}" th:object ="${customer}" method="post" >
+
+                <div class="form-floating is-invalid">
+                    <input type="name" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Username" name="name" required>
+                    <label for="floatingInputGroup2">Name</label>
+                </div>
+                <div class="invalid-feedback">
+                    Please choose a username.
+                </div>
+
+                <div class="form-floating is-invalid">
+                    <input type="email" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Email" name="mail" required>
+                    <label for="floatingInputGroup2">Email</label>
+                </div>
+                <div class="invalid-feedback">
+                    Please choose a email address.
+                </div>
+
+                <div class="form-floating is-invalid">
+                    <input type="mobile" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Username" name="tele" required>
+                    <label for="floatingInputGroup2">Mobile No</label>
+                </div>
+                <div class="invalid-feedback">
+                    Please choose a 10-digit mobile no.
+                </div>
+
+                <div class="form-floating is-invalid">
+                    <input type="password" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Username" name="password" required>
+                    <label for="floatingInputGroup2">Password</label>
+                </div>
+                <div class="invalid-feedback">
+                    Include at least 10 characters
+                </div>
+
+                <div class="form-floating is-invalid">
+                    <input type="Passowrd" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Username" required>
+                    <label for="floatingInputGroup2">Confirm Password</label>
+                </div>
+                <div class="invalid-feedback">
+                    Confirm Password.
+                </div>
+
+
+                <div class="row" id="buttonarea">
+                    <button type="submit" class="button"> Sign up</button>
+                </div>
+            </form>
+        </div>
+
+
+
+
+    </div>
+
+    <div class="col-4" id="innerrcolumn">
+    </div>
+</div>
+
+
+
 
 <p th:text="${message}"></p>
- </body>
+<script src="js/CustomerSignup.js"></script>
+</body>
 </html>
